--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,5 @@
 {
   "buildCommand": "pnpm run build",
   "installCommand": "pnpm install",
-  "outputDirectory": "dist",
-  "functions": {
-    "api/replicate/[...replicate].ts": {
-      "maxDuration": 60
-    }
-  }
+  "outputDirectory": "dist"
 }
