--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^19.1.0",
     "@google/genai": "^1.3.0",
     "react-dom": "^19.1.0",
+    "replicate": "^0.25.0",
     "@heroicons/react": "^2.1.3"
   },
   "devDependencies": {
