--- a/package.json
+++ b/package.json
@@ -9,23 +9,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.1.0",
+    "@clerk/clerk-react": "^5.33.0",
     "@google/genai": "^1.3.0",
+    "@heroicons/react": "^2.1.3",
+    "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "replicate": "^0.25.2",
-    "@heroicons/react": "^2.1.3"
+    "replicate": "^0.25.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@types/react": "^18.2.36",
     "@types/react-dom": "^18.2.15",
-    "typescript": "~5.7.2",
-    "vite": "^6.2.0",
-    "tailwindcss": "^3.4.4",
-    "postcss": "^8.4.35",
     "autoprefixer": "^10.4.16",
-    "tailwindcss-animate": "^1.0.7",
     "class-variance-authority": "^0.7.0",
-    "tailwind-merge": "^2.4.0"
+    "postcss": "^8.4.35",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss": "^3.4.4",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "~5.7.2",
+    "vite": "^6.2.0"
   }
 }
