--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@clerk/clerk-react": "^5.33.0",
     "@google/genai": "^1.3.0",
     "@heroicons/react": "^2.1.3",
+    "@supabase/supabase-js": "^2.50.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "replicate": "^0.25.2"
+    "replicate": "^0.25.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
