--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/clerk-react": "^5.33.0",
     "@google/genai": "^1.3.0",
     "@heroicons/react": "^2.1.3",
+    "convex": "^1.25.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "replicate": "^0.25.2"
